<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/txtCodigo"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/txtDescripcion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txtPrecio"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

    <Button
        android:id="@+id/butBuscar"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/butBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butRegistrar" />

    <Button
        android:id="@+id/butRegistrar"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:text="@string/butRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />

    <Button
        android:id="@+id/butModificar"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/butModificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butEliminar" />

    <Button
        android:id="@+id/butEliminar"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/butEliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>